--- a/app/src/main/res/menu/appointment_list_menu.xml
+++ b/app/src/main/res/menu/appointment_list_menu.xml
@@ -8,4 +8,10 @@
         android:title="Refresh"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/logout"
+        android:title="Logout"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_log_out"/>
+
 </menu>
