--- a/app/src/main/res/layout/list_item_appointment.xml
+++ b/app/src/main/res/layout/list_item_appointment.xml
@@ -43,14 +43,14 @@
             android:id="@+id/appointment_with_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/appointment_date"
-            android:layout_alignStart="@+id/appointment_date"
-            android:layout_marginTop="32dp"
             tools:text="Appointment With" />
 
         <TextView
             android:id="@+id/appointment_date"
             android:layout_width="wrap_content"
+            android:layout_below="@+id/appointment_with_name"
+            android:layout_alignStart="@+id/appointment_with_name"
+            android:layout_marginTop="32dp"
             android:layout_height="wrap_content"
             tools:text="Appointment Date" />
 
